# fuckoff4

./: Cargo.toml  README.md
.github/workflows/: rust_ci.yml  rust_ci_esp.yml  rust_ci_proxy.yml
case/: Sidegrade Front Case v2.stl  Sidegrade Front Case v3.stl  Sidegrade Rear Case v2.stl  Sidegrade Rear Case v3.stl
esp/: Cargo.toml
esp/HACKING/: run.sh
esp/src/: config.rs.sample  display.rs  main.rs
proxy/: .env.sample  Cargo.toml  Dockerfile
proxy/HACKING/: docker-compose.yaml
proxy/src/: calendar.rs  main.rs
src/: main.rs
