[package]
name = "fuckoff4"
version = "0.1.0"
authors = ["Will Nilges <wdn5796@rit.edu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
lcd-lcm1602-i2c = "0.1.0"
esp-idf-hal = "0.42.5"
anyhow = "1.0.75"
hd44780-driver = "0.4.0"
embedded-hal = "0.2.7"
http = "1.0.0"
embedded-svc = "0.26.4"

[build-dependencies]
embuild = "0.31.3"
