[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = [ "serde", "clock" ] }
convert_case = "0.6.0"
dotenv = "0.15.0"
json = "0.12.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
diesel = { version = "2.1.0", features = ["postgres"] }
